--- a/Challenges/ChallengeEpicSpiesAssignment/Content/Site.css
+++ b/Challenges/ChallengeEpicSpiesAssignment/Content/Site.css
@@ -1,30 +1,65 @@
 ﻿
+body {
+    background: #999;
+}
 
 .wrapper {
-    border: solid 1px Red;
+    /*border: solid 1px Red;*/
 }
 .containment {
-    border: solid 2px Black;
+    border: solid 2px #333;
+    border-top: dashed 1px #666;
+    border-left: dashed 1px #666;
     width: 66%;
     margin: 0 auto;
+    background: #EDEDED;
+    padding: 10px;
 }
 .section {
     margin: 0 auto;
 }
 
 .header {
-    border: dashed 1px Orange;
+    /*border: dashed 1px Orange;*/
 }
 
 .body {
-    border: dashed 1px Orange;
+    /*border: dashed 1px Orange;*/
 }
 
 .footer {
-    border: dashed 1px Orange;
+    /*border: dashed 1px Orange;*/
 }
 
 .hidden {
   display: none !important;
   visibility: hidden !important;
+}
+
+.logo {
+    height: 190px;
+    width: 153px;
+    background: url('./images/epic-spies-logo.png') no-repeat #45c0c3;
+    float: left;
+}
+.title {
+    float: left;
+    padding-left: 10px;
+}
+.clear {
+    clear: both;
+}
+label.labelForTextBox {
+    clear: both;
+    width: 175px;
+    float: left;
+    font-weight: 800;
+}
+input[type='textbox'].formTextBox {
+    float: left;
+}
+
+.row {
+    clear: both;
+    margin: 10px auto 0px auto;
 }
